improve new-page steps

--- a/layout/_partial/frame.ejs
+++ b/layout/_partial/frame.ejs
@@ -60,6 +60,7 @@
             <timeline></timeline>
             <post></post>
             <page></page>
+            <codelib></codelib>
             <records></records>
             <gallery></gallery>
             <!-- END content -->
