--- a/source/asset/css/_common/color.styl
+++ b/source/asset/css/_common/color.styl
@@ -38,6 +38,7 @@
   --color-gallery-hover #cccccc
   --color-recentposts-more-front #0099FF
   --color-recentposts-more-back #ffffff
+  --color-codelib-text #0099FF
 
 :root.gray
   --color-text #333333
@@ -79,6 +80,7 @@
   --color-gallery-hover #cccccc
   --color-recentposts-more-front #0099FF
   --color-recentposts-more-back #ffffff
+  --color-codelib-text #0099FF
 
 :root.colorful
   --color-text #000000
@@ -117,6 +119,7 @@
   --color-gallery-hover #CC0066
   --color-recentposts-more-front #0099FF
   --color-recentposts-more-back #ffffff
+  --color-codelib-text #0099FF
 
 :root.night
   --color-text #cccccc
@@ -158,6 +161,7 @@
   --color-gallery-hover #222222
   --color-recentposts-more-front #0066cc
   --color-recentposts-more-back #ffffff
+  --color-codelib-text #33ccff
 
 .color_1
   color #CC0033
