--- a/source/asset/css/_common/layout.styl
+++ b/source/asset/css/_common/layout.styl
@@ -322,10 +322,9 @@ a
 :root.colorful
   .m-evanyou-canvas
     display none
-  /*
   &:not(.night)
     body:before
-      content '图片/Picture URL: ' + $picurl
+      content '图片 Picture API: ' + $picurl
       position fixed
       top 0
       z-index -1
@@ -335,7 +334,6 @@ a
       line-height 1.5
       height 100%
       text-align center
-  */
 
 :root.night
   .m-evanyou-canvas
