--- a/source/asset/css/_part/recentposts.styl
+++ b/source/asset/css/_part/recentposts.styl
@@ -13,6 +13,12 @@
   background var(--color-background)
   line-height 1
   animation recentposts-appear 0.6s ease
+  .footnote-ref
+    user-select none
+    pointer-events none
+    text-decoration line-through
+    a
+      color inherit
 
 .p-recentposts-caption
   padding 0 $gap
