--- a/source/asset/css/_common/color.styl
+++ b/source/asset/css/_common/color.styl
@@ -39,6 +39,7 @@
   --color-recentposts-more-front #0099FF
   --color-recentposts-more-back #ffffff
   --color-codelib-text #0099FF
+  --color-translater-highlight #33333399
 
 :root.gray
   --color-text #333333
