--- a/source/asset/css/_common/color.styl
+++ b/source/asset/css/_common/color.styl
@@ -40,6 +40,7 @@
   --color-recentposts-more-back #ffffff
   --color-codelib-text #0099FF
   --color-translater-highlight #33333399
+  --color-notification-text #333333
 
 :root.gray
   --color-text #333333
@@ -102,7 +103,7 @@
   --color-menus-active-text #ffffff
   --color-menus-active-background #0099ff
   --color-settings-switch-on #333333
-  --color-settings-switch-off #99CC33
+  --color-settings-switch-off #ffffff
   --color-audioplayer-lrc #333333
   --color-audioplayer-lrc-current #000000
   --color-audioplayer-lrc-background linear-gradient(180deg, hsla(0, 0%, 100%, 0) 0, hsla(0, 0%, 100%, 0.8))
