--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,5 +1,6 @@
 <%- partial('_partial/frame', {
   favicon: theme.favicon.small,
+  appleIcon: theme.appleIcon,
   manifest: theme.manifest.path,
   parts: JSON.stringify([
     'post'
@@ -12,7 +13,7 @@
     page.categories && (result = result.concat(page.categories.map(cat => cat.name)));
     return result.join(', ');
   })(),
-  description: (page.content && page.content.replace(/\n/g, '\s').replace(/(<\/?.+?\/?>)+/g, '|').replace('|', '...').substr(0, 147) + '...'),
+  description: (page.content && page.content.replace(/\n/g, '\s').replace(/(<\/?.+?\/?>)+/g, '|').replace('|', '...').substr(0, 123) + '...'),
   google_site_verification: config.google_site_verification,
   baidu_site_verification: config.baidu_site_verification,
   adScript: config.adScript
