--- a/source/asset/css/_part/recentposts.styl
+++ b/source/asset/css/_part/recentposts.styl
@@ -31,12 +31,13 @@
 .p-recentposts-more
   text-align center
   cursor pointer
-  border-top 1px solid var(--color-clear)
   @media (max-width: $app_mobile_width)
+    margin $gap * 2 0
     line-height 2.5
     color var(--color-recentposts-more-back)
     background var(--color-recentposts-more-front)
   @media (min-width: $app_mobile_width_min)
+    border-top $gap solid var(--color-clear)
     line-height 3
     color var(--color-recentposts-more-front)
     &:hover
@@ -130,3 +131,5 @@
     max-width initial
   .p-recentpost-meta
     padding 0
+  .p-recentposts-items
+    border-bottom 1px solid var(--color-clear)
