--- a/source/asset/css/_part/extension.styl
+++ b/source/asset/css/_part/extension.styl
@@ -12,8 +12,8 @@
 
 .p-extension
   position fixed
-  left $gap * 3
-  bottom $gap * 3
+  left $gap * 2.5
+  bottom $gap * 6 + $font_size * 2
   z-index 3
   user-select none
   animation extension-appear 0.6s ease
