--- a/source/asset/css/style.styl
+++ b/source/asset/css/style.styl
@@ -9,6 +9,7 @@
 @import '_plugin/share.min.css'
 // Default
 @import '_common/layout'
+@import '_common/hide'
 // Part
 @import '_part/goingto'
 @import '_part/extension'
@@ -40,3 +41,4 @@
 @import '_part/adframe'
 @import '_part/empty'
 @import '_part/notification'
+@import '_part/iconlib'
