--- a/source/asset/css/_common/layout.styl
+++ b/source/asset/css/_common/layout.styl
@@ -132,13 +132,13 @@ a
   text-overflow ellipsis
   overflow-x hidden
   // background lightgreen
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     transition all 0.6s
     &.sticky
       float none
       position fixed
       bottom 0
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     position fixed
     bottom 0
     height s('calc(100vh - 3em - %s)', $progress_height)
@@ -147,7 +147,7 @@ a
 .m-frame
   float right
   width s('calc(100% - %s)', $drawer_width)
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     transition all 0.6s
 
 .m-aside
@@ -156,7 +156,7 @@ a
   text-overflow ellipsis
   overflow-x hidden
   // background mediumspringgreen
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     transition all 0.6s
     &.sticky-bottom
       position fixed
@@ -166,26 +166,26 @@ a
       position fixed
       right s('calc(50% - %s)', $app_width * 0.5)
       top s('calc(3em + %s)', $progress_height)
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     position fixed
     bottom 0
     right s('calc(50% - %s)', $app_width * 0.5)
     height s('calc(100vh - 3em - %s)', $progress_height)
     overflow hidden
-  @media (min-width: $app_mobile_width_min) and (max-width: $app_width)
+  @media (min-width $app_mobile_width_min) and (max-width $app_width)
     right 0
 
 .m-main
   float left
   min-width $main_min_width
   width s('calc(100% - %s)', $aside_width)
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     transition all 0.6s
 
 .m-footer
   clear both
   width 100%
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     transition all 0.6s
 
 .m-heaper
@@ -194,14 +194,14 @@ a
   line-height 3
   background var(--color-background)
   overflow hidden
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     margin $gap * 4 0
     border-radius $gap * 0.5
     border 1px solid var(--color-clear)
 
 .m-content
   width 100%
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     margin $gap * 4 0
 
 #live2d-widget
@@ -215,11 +215,11 @@ a
 :root.closeDrawer
   .m-drawer
     width 0
-    @media (max-width: $app_mobile_width)
+    @media (max-width $app_mobile_width)
       height 0
   .m-frame
     width 100%
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     .m-main, .m-footer
       padding-left $gap * 2
     .m-footer
@@ -227,7 +227,7 @@ a
       margin 0 $aside_width 0 0
 
 :root.closeAside
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     .m-aside
       width 0
     .m-main
@@ -250,11 +250,11 @@ a
   .aplayer-lrc
     opacity 0 !important
 
-@media (max-width: $app_width)
+@media (max-width $app_width)
   .m-aside.sticky-bottom, .m-aside.sticky-top
     right 0
 
-@media (max-width: $app_mobile_width)
+@media (max-width $app_mobile_width)
   .m-app
     overflow-x hidden
   .m-drawer, .m-frame, .m-aside, .m-main
@@ -282,23 +282,9 @@ a
 
 .markdown-body
   color var(--color-text)
+  counter-reset h1
   h1, h2, h3, h4, h5, h6
     padding-top 0.5em
-  .headerlink
-    pointer-events none
-    user-select none
-  h1, h4
-    .headerlink
-      &:before
-        content '❑ '
-  h2, h5
-    .headerlink
-      &:before
-        content '❏ '
-  h3, h6
-    .headerlink
-      &:before
-        content '■ '
   code
     font-weight bold
   .highlight
@@ -313,7 +299,7 @@ a
         margin-top -1px
         background #03a9f4
         transition width 0.6s
-      @media (min-width: $app_mobile_width_min)
+      @media (min-width $app_mobile_width_min)
         &:hover
           text-decoration none
           &:after
@@ -330,12 +316,12 @@ a
       border 1px solid
       margin 0.5em 0
       display inline-block
-      @media (min-width: $app_mobile_width_min)
+      @media (min-width $app_mobile_width_min)
         opacity 0.25
         &:hover
           opacity 1
           color #03a9f4
-    @media (min-width: $app_mobile_width_min)
+    @media (min-width $app_mobile_width_min)
       &:hover
         + em
           opacity 1
@@ -360,7 +346,7 @@ a
       text-align center
 
 :root.night
-  img
+  #live2d-widget, img
     filter brightness(0.8)
   .m-evanyou-canvas
     display initial
@@ -378,12 +364,30 @@ a
 :root.gray:not(.night)
   .m-evanyou-canvas
     display none
-  @media (min-width: $app_mobile_width_min)
+  @media (min-width $app_mobile_width_min)
     .m-header
       box-shadow 0 0 4px 2px var(--color-shadow)
     .p-translater-result
       box-shadow 0 2px 1px 1px var(--color-shadow)
-    .m-heaper, .p-brand, .p-menus, .p-skin, .p-settings, .p-panels, .p-audioplayer, .p-toc, .p-hitokoto, .p-recentposts, .p-timeline, .p-post, .p-page, .p-record, .p-gallery-item, .p-comment, .p-footer, .p-translater-bar, .p-search-dialog-bar, .p-search-dialog-result, .p-codelib, .p-empty
+    .m-heaper, .p-brand, .p-menus, .p-skin, .p-settings, .p-panels, .p-audioplayer, .p-toc, .p-hitokoto, .p-recentposts, .p-timeline, .p-post, .p-page, .p-record, .p-gallery-item, .p-comment, .p-footer, .p-translater-bar, .p-search-dialog-bar, .p-search-dialog-result, .p-codelib, .p-empty, .p-iconlib
       box-shadow 0 1px 2px 1px var(--color-shadow)
-    .m-heaper, .p-brand, .p-menus, .p-skin, .p-settings, .p-panels, .p-audioplayer, .p-toc, .p-hitokoto, .p-recentposts, .p-timeline, .p-post, .p-page, .p-record, .p-gallery-item, .p-comment, .p-footer, .p-search-dialog-bar, .p-search-dialog-result, .p-codelib, .p-empty
+    .m-heaper, .p-brand, .p-menus, .p-skin, .p-settings, .p-panels, .p-audioplayer, .p-toc, .p-hitokoto, .p-recentposts, .p-timeline, .p-post, .p-page, .p-record, .p-gallery-item, .p-comment, .p-footer, .p-search-dialog-bar, .p-search-dialog-result, .p-codelib, .p-empty, .p-iconlib
       border-width 0
+  .p-adframe-qrcode, .p-goingto-top, .p-goingto-bottom, .p-xcanvas
+    box-shadow 0 0 4px 2px var(--color-shadow)
+    &:hover
+      box-shadow 0 0 4px var(--color-shadow)
+    &:active
+      box-shadow inset 0 0 4px var(--color-shadow)
+  .p-adframe-content
+    box-shadow 0 0 4px 2px var(--color-shadow)
+  .p-extension
+    .p-extension-button, .p-extension-frame
+      box-shadow 0 0 4px 2px var(--color-shadow)
+    &:hover
+      .p-extension-button, .p-extension-frame
+        box-shadow none
+
+@media (max-width $float_button_min_app_width)
+  .p-adframe-qrcode, .p-goingto-top, .p-goingto-bottom, .p-xcanvas, .p-extension-button
+    box-shadow 0 0 4px 1px
