--- a/source/asset/css/_common/dimension.styl
+++ b/source/asset/css/_common/dimension.styl
@@ -11,7 +11,7 @@ $drawer_width = 320px
 $aside_width = 320px
 $main_min_width = 320px
 $main_min_width_with_offset = $main_min_width + 32px // scrollbar offset
-$app_mobile_width = 1024px // $drawer_width + $aside_width + $main_min_width_with_offset
+$app_mobile_width = 1023px //+ $font_size * 6 // $drawer_width + $aside_width + $main_min_width_with_offset ; + 6em
 $app_mobile_width_min = $app_mobile_width + 1px // for media min-width
 $audioplayer_height = 56px
 $audioplayer_list_height = (32px + 1px) * 9 // Meting.js list-max-height
